--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -3,6 +3,7 @@
     "builds": [{"src": "./index.js", "use": "@vercel/node"}],
     "headers": [
         {
+          "source": "/api/(.*)",
           "headers": [
             { "key": "Access-Control-Allow-Credentials", "value": "true" },
             { "key": "Access-Control-Allow-Origin", "value": "*" },
