--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,9 +1,10 @@
 {
     "version": 2,
     "builds": [{"src": "./index.js", "use": "@vercel/node"}],
+    
     "headers": [
         {
-          "source": "/api/(.*)",
+          "source": "/(.*)",
           "headers": [
             { "key": "Access-Control-Allow-Credentials", "value": "true" },
             { "key": "Access-Control-Allow-Origin", "value": "*" },
