--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -4,7 +4,7 @@
     
     "headers": [
         {
-          "source": "/rooms1(.*)",
+          "source": "/rooms1",
           "headers": [
             { "key": "Access-Control-Allow-Credentials", "value": "true" },
             { "key": "Access-Control-Allow-Origin", "value": "*" },
