--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,19 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js", // Update with your main entry point if different
+      "src": "./index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)", // Matches all routes
+      "src": "/(.*)",
       "dest": "./index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"], // Include OPTIONS for preflight requests
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*", // Allow requests from any origin (use with caution in production)
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS", // Allowed HTTP methods
-        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With, Accept, Origin" // Allowed request headers
+        "Access-Control-Allow-Origin": "*", 
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With, Accept, Origin"
       }
     }
   ]
