--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,22 +1,42 @@
-
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "./index.js", 
-        "use": "@vercel/node"
-      }
-    ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "./index.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"], 
-        "headers": {
-          "Access-Control-Allow-Origin": "*", 
-          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS", 
-          "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With, Accept, Origin"
-        }
+        "dest": "/index.js"
+      }
+    ],
+    "functions": {
+      "api": {
+        "handler": "index.handler",
+        "runtime": "nodejs14.x",
+        "memory": 1024
+      }
+    },
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.js"
+      }
+    ],
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET, POST, OPTIONS, PUT, DELETE"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "*"
+          }
+        ]
       }
     ]
-}
+  }
+  
