--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,35 +1,35 @@
+
 {
     "version": 2,
+    "builds": [
+      {
+        "src": "./index.js", 
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "index.js"
-      }
-    ],
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/index.js"
+        "dest": "./index.js"
       }
     ],
     "headers": [
-      {
-        "source": "/(.*)",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "*"
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, OPTIONS, PUT, DELETE"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "*"
-          }
-        ]
-      }
-    ]
-  }
-  
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, OPTIONS, PUT, DELETE"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "*"
+        }
+      ]
+    }
+]
+}
