--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,31 +1,19 @@
-
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./index.js", 
-        "use": "@vercel/node"
-      }
+    "version":2,
+    "builds":[
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
     ],
-    
-        "headers": [
-          {
-            "source": "/(.*)",
-            "headers": [
-              {
-                "key": "Access-Control-Allow-Origin",
-                "value": "*"
-              },
-              {
-                "key": "Access-Control-Allow-Methods",
-                "value": "GET, POST, OPTIONS, PUT, DELETE"
-              },
-              {
-                "key": "Access-Control-Allow-Headers",
-                "value": "*"
-              }
-            ]
-          }
-        ]
-      }
-      
+    "routes":[
+        {
+            "src": "/(.*)",
+            "dest":"./index.js",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTINS"],
+            "headers":{
+                "Acess-Control-Allow-Origin": "*"
+            }
+        }
+    ]
+}
