--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -8,7 +8,8 @@
     ],
     "routes":[
         {
-            "src": "/(.*)",
+            "src": "/rooms1/(.*)",
+            
             "dest":"./index.js",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTINS"],
             "headers":{
